fmh_back68 minor changes